# coinpayments-multisig

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Makefile  Multisig.flat.sol  README.md  docker-compose.yml  foundry.toml  justfile
TRC20_USDT/: BasicToken.sol  BlackList.sol  Migrations.sol  MultisigWallet.sol  Ownable.sol  Pausable.sol  StandardToken.sol  StandardTokenWithFees.sol  TetherToken.sol
app/: pubspec.yaml
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/models/: multisig_info.dart  transaction.dart
app/lib/providers/: multisig_provider.dart
app/lib/screens/: change_password_dialog.dart  dashboard_screen.dart  owners_screen.dart  password_setup_screen.dart  settings_screen.dart  submit_transaction_screen.dart  transaction_detail_screen.dart  transactions_screen.dart
app/lib/services/: blockchain_service.dart  contract_service.dart  contracts_service.dart  crypto_service.dart  storage_service.dart  tron_service.dart
app_official_tron/: pubspec.yaml
app_official_tron/lib/: main.dart
app_official_tron/lib/models/: pending_transaction.dart  tron_permission.dart
app_official_tron/lib/providers/: multisig_provider.dart
app_official_tron/lib/screens/: connect_wallet_screen.dart  dashboard_screen.dart  delete_wallet_dialog.dart  home_screen.dart  (+8 more)
app_official_tron/test/: widget_test.dart
script/: Multisig.s.sol
src/: IERC20.sol  Multisig.sol
src/interfaces/: ITetherToken.sol
test/: Multisig.t.sol  TetherToken.t.sol  USDTTransferTest.t.sol
tron-utils/: Cargo.toml
tron-utils/src/: main.rs
(+5 files in other folders)
