[package]
name = "tron-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
secp256k1 = { version = "0.28", features = ["recovery", "rand-std"] }
bs58 = "0.5"
anyhow = "1.0"
rand = "0.8"
